tests/fixtures/invalid-only/non-compliant-first.php
<?php

declare(strict_types=1);

$nonCompliant = array(1);
